# iris-ml-classification

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yml  databricks.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  train_and_log_the_model basic.py  train_and_log_the_model.py
.github/workflows/: ci-mkdocs.yml  ci-workflow.yml
app/: api.py  app.py  app.yml  app1.py  config.py  requirements.txt  styles.css  ui.py
docs/: index.md
docs/explanation/: architecture.md
docs/how-to/: part-1.md
docs/reference/: api.md  app.md  config.md  ui.md
docs/tutorials/: getting-started.md
explanation/architecture/: index.html
explanation/pitfalls/: index.html
explanation/tips/: index.html
how-to/part-1/: index.html
notebooks/: train_and_log_the_model_basic.py
reference/api/: index.html
reference/app/: index.html
reference/config/: index.html
reference/ui/: index.html
resources/: inference.app.yml
search/: search_index.json
src/iris_ml_classification/: app.py  app.yml  config.py  styles.css  ui.py
tests/: conftest.py  test_api.py  test_app.py  test_mlflow_serve.py  test_ui.py
tests/test_data/: test_set.csv
tutorials/first-model/: index.html
tutorials/getting-started/: index.html
